@@ -8,7 +8,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>hangMan</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<name>hangMan Maven Webapp</name>
 	<!-- FIXME change it to the project's website -->
@@ -119,6 +119,12 @@
 					<artifactId>log4j-to-slf4j</artifactId>
 				</exclusion>
 			</exclusions>
+			<version>3.4.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
 			<version>3.4.0</version>
 		</dependency>
 
@@ -310,6 +316,14 @@
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
+					<version>3.4.0</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>repackage</goal>
+							</goals>
+						</execution>
+					</executions>
 				</plugin>
 
 				<plugin>
@@ -320,12 +334,17 @@
 					<artifactId>maven-deploy-plugin</artifactId>
 					<version>2.8.2</version>
 				</plugin>
+
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.0.0</version>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>3.3.0</version>
 					<configuration>
-						<argLine>--enable-preview</argLine>
+						<archive>
+							<manifest>
+								<mainClass>com.example.HangManApp</mainClass>
+							</manifest>
+						</archive>
 					</configuration>
 				</plugin>
 
